--- a/notes.tex
+++ b/notes.tex
@@ -213,14 +213,13 @@ To-do list after Venice CesIfo 06/15/17:
 				\]
 				Note that this threshold is smaller than $\frac{W}{T + D}$, the one we get without concessions having material benefit / harm
 		\end{itemize}
-	\item Jim Fearon: maybe get rid of repeated game and just parameterize a one-shot game (doens't work because concessions required for separation are too large; require future to recoup cost
+	\item Jim Fearon: maybe get rid of repeated game and just parameterize a one-shot game (doens't work because concessions required for separation are too large; require future to recoup cost)
 		\begin{itemize}
 			\item he has a paper about concessions being used against you; he also gave me the reference for another one but I've forgotten it
 		\end{itemize}
 	\item Someone who \textit{can't} cooperate under either $e=0$ or $e=1$ CAN cooperate under mediator
 		\begin{itemize}
 			\item In the absence of mediation, being able to burn money can help, but you still lose something
-			\item I still have a question about the overall game: if $e=0$ provides higher welfare if it were enforceable but it's not, do we just go with $e=1$?
 			\item Some parameters. For all of these, I take $W=8$, $D=5$, $T=10$
 				\begin{itemize}
 					\item $p=.4, \de_l = .45, \de_h = \de_{STC} = .53$. Choose $e=1$, but $\de_1 = .65$
